<resources>
    <string name="app_name">Ram Led Poi</string>
    <string name="version">v 0.16</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ram Led Poi</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_control">Управление</string>
    <string name="menu_pictures">Изображения</string>
    <string name="menu_config">Настройки poi</string>
    <string name="menu_setupip">Настройка IP</string>
    <string name="menu_update">Проверить обновления</string>
    <string name="menu_feedb">Поделиться apk</string>
    <string name="menu_help">Справка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="helptext_fragment">
        v0.16\n
        Добавлены кнопки для листания программ\n
        На вкладке Изображения добовлены кнопки для запуска и остановки реквизита\n
        v0.15\n
        Исправлена ошибка открытия страниц картинок на вкладке Изображения\n
        v0.14\n
        Запуск программы с задержкой\n
        Настройка интервала переключения в режиме файлов\n
        v0.13\n
        Добавлена настройка контрастности\n
        Добавлена возможность связать два устройсва для синхронного запуска\n
        v0.121\n
        Добавлены кнопки для запуска реквизита одновременно с воспроизведением mp3 файла\n
        На вкладке изображения сверху показаны адреса устройств\n
        v0.12\n
        Добавлена кнопка Сохр на страницу настройки poi\n
        Добавлена функция автодобавления адресов ip при включении реквизита\n
        v0.11\n
        Исправлен баг выбора картинки в режиме точки доступа\n
        v0.10\n
        Добавлены раздельные опции для датчика ускорения\n
        Запуск от удара, подстройка яркости и подстройка скорости\n
        v0.094\n
        Исправлена ошибка при перемотке файлов\n
        v0.093\n
        На вкладке Изображения можно перейти на главную страницу в поях\n
        v0.092\n
        Доработки кода для android старше 7 версии\n
        Добавлена возможность автоматически проверять обновления при запуске\n
        v0.091\n
        Незначительные изменения: исправлена иконка, добавлена команда вибрации и скрол справки\n
        v0.09\n
        Можно выбрать отображаемое изображение на странице Изображения кликнув по имени\n
        Чтобы не тащить каждый раз картинки с пои изображения можно закэшировать\n
        v0.08\n
        Добавлено вкл/выкл датчик ускорения\n
        v0.07\n
        Добавлена возможность работы через протокол EspNOW\n
        v0.06\n
        Из меню Изображения можно отправлять файлы на пои\n
        v0.05\n
        Параметры хранятся в приложении, что уменьшает вероятность рассинхронизации.
        Если настройка \"Не ждать подключения wifi\" активна, желательно все равно нажать кнопку Запуск для получения текущей конфигурации из пои\n
        v0.04\n
        Отправляйте широковещательные запросы на всю сеть по UDP\n
        v0.03\n
        Подстраивайте задержку строк для каждой картинки индивидуально,
        для этого надо перейти в режим отображения картинок по одной и использовать соответсвующие кнопки управления,
        затем сохраните найстройки, шаг общей задержки 1мс, шаг индивидуальной 200мкс, она будет прибавляться к общей\n
        v0.02\n
        Включите телефон в режиме точки доступа с параметрами ssid: ledControl pass:12345678
        На вкладке IP нажмите кнопку \"Поиск IP с точки\" чтобы поискать адреса подключенных устройств.
        Адреса добавятся автоматически, затем сохраните их\n
        v0.01\n
        На вкладке IP введите адреса и сохраните\n
        На вкладке управления жмите кнопки для отправки команд
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
